# claude-litellm-proxy-system

./: .env.example  .gitignore  COMPREHENSIVE_ANALYSIS_REPORT.md  MASKING_RULES.md  PLAN.md  README.md  comprehensive_test_framework.py  comprehensive_test_results.json  debug_masking.py  production_readiness_report.json  pyproject.toml  test_overlap_detection.py  test_overlap_detection_fixed.py  test_priority_validation.py
docs/: README.md
docs/development/: pattern_alignment_fixes.md
docs/reports/: FINAL-LEGACY-CONFLICT-ANALYSIS-REPORT.md  README.md  REDIS_UNIQUE_ID_ISSUE_REPORT.md  conflict-examples-detailed.md  improvement-justification.md  ref-legacy-conflict-analysis.md
docs/specifications/: MASKING_RULES.md  masking-rule-checklist.md  ref-masking-rule.md
scripts/: dev.sh  setup.sh  test.sh
src/claude_litellm_proxy/: __init__.py  main.py
tests/: README.md  test_core_masking.py  test_end_to_end_application_verification.py  test_full_system_verification.py  test_integrated_masking.py  test_litellm_client.py  test_litellm_integration.py  test_litellm_integration_verification.py  test_manual_verification.py  test_phase3_basic_flow.py  test_phase3_complete_integration.py  test_redis_mapping.py  verify_core_patterns.py
tests/compliance/: test_ref_compliance_100.py
tests/integration/: test_claude_api_integration.py
tests/overlap/: README.md
tests/patterns/: extract_all_patterns.py  test_missing_patterns.py  test_phase3_patterns.py
verification/: VERIFICATION_ENV_PATH.md  VERIFICATION_PHASE1.md  VERIFICATION_PHASE2.md  VERIFICATION_PHASE3.md
(+22 files in other folders)
